--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
-project(source-record VERSION 0.2.6)
+cmake_minimum_required(VERSION 3.12..4.0)
+
+project(source-record VERSION 0.2.7)
 set(PROJECT_FULL_NAME "Source Record")
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/version.h.in ${CMAKE_CURRENT_SOURCE_DIR}/version.h)
@@ -28,6 +30,10 @@ if(WIN32)
 		source-record.rc)
 endif()
 
+if(BUILD_OUT_OF_TREE)
+    find_package(LibObs REQUIRED)
+endif()
+
 add_library(source-record MODULE
 	${source-record_HEADERS}
 	${source-record_SOURCES})
@@ -36,5 +42,21 @@ target_link_libraries(source-record
 	libobs
 	${source-record_PLATFORM_DEPS})
 
-set_target_properties(source-record PROPERTIES FOLDER "plugins/exeldro")
-install_obs_plugin_with_data(source-record data)
+if(BUILD_OUT_OF_TREE)
+    if(NOT LIB_OUT_DIR)
+        set(LIB_OUT_DIR "/lib/obs-plugins")
+    endif()
+    if(NOT DATA_OUT_DIR)
+        set(DATA_OUT_DIR "/share/obs/obs-plugins/source-record")
+    endif()
+    set_target_properties(source-record PROPERTIES PREFIX "")
+    install(TARGETS source-record
+        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/${LIB_OUT_DIR})
+    install(DIRECTORY data/locale
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/${DATA_OUT_DIR})
+else()
+    target_include_directories(source-record PRIVATE
+        "${CMAKE_SOURCE_DIR}/UI/obs-frontend-api")
+    set_target_properties(source-record PROPERTIES FOLDER "plugins/exeldro")
+    install_obs_plugin_with_data(source-record data)
+endif()
